# ITIDA_Projects

./: DataBase.json  Readme.md  Transaction_DataBase.json  bashScript.sh  file.c  send_email.py
Bash_for_backup/: bashScript.sh
Contol_Fan/: file.cpp
Digital_Market/: Digital_Market.pro  HandleDataBase.cpp  HandleDataBase.h  item_quantity.json  items.json  mainwindow.cpp  mainwindow.h  mainwindow.ui  nohup.out
Fstream_class/: Fstream
Presentation/: link-to-presentation-vedio
Producer_Consumer/: PC  PC.cpp
Quote_QT/: angry.txt  bored.txt  calm.txt  excited.txt  happy.txt  main.cpp  sad.txt
Server-Client[simple/: client_net.c  server.c
Simples_Module/: Makefile  file.c
Tool to convert hex into  string/: tool.c
Vedio_Player/: output  state_machine.plantuml  vedio_player.cpp
clientGUI/: DeviceController.cpp  DeviceController.h  clientGUI.3601768  clientGUI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
client_json/: ClientClass.cpp  ClientClass.h  client_test.pro  client_test.pro.user.3601768  main.cpp
parent-child/: child.cpp  parent.cpp
project_1/: ex_1.cpp  ex_2.cpp  ex_3.cpp  ex_4.cpp  ex_5.cpp  ex_6.cpp  file_2.cpp  mohanad@192.168.87.39
project_3/: child.cpp  main.cpp  parent.cpp
project_4/: main.cpp  out  test.cpp  test2.cpp  uart.cpp
sequence_digram/: file.planuml  seq.png:Zone.Identifier
server_json/: DataBase.cpp  DataBase.h  DataBase.json  MyThreadClass.cpp  MyThreadClass.h  ServerClass.cpp  (+6 more)
snake_effect2/: CMakeLists.txt
snake_effect2/Inc/: type.h
snake_effect2/Lib/: config.h  interface.h
snake_effect2/Src/: main.c
(+133 files in other folders)
